# humansort

./: Cargo.toml  LICENSE.md  README.md
humansort-cli/: Cargo.toml
humansort-cli/src/: main.rs
humansort-lib/: Cargo.toml
humansort-lib/src/: lib.rs
humansort-web/: Cargo.toml  index.html
humansort-web/src/: main.rs
