[package]
name = "humansort-web"
authors = ["Bradley Gannon <bradley@bradleygannon.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
humansort-lib = { path = "../humansort-lib" }
web-sys = { version = "0.3.60", features = ["HtmlInputElement"] }
yew = { version = "0.20.0", features = ["csr"] }
